# proca

./: README.md
projekt2/: Main.hs  projekt.cabal
projekt2/app/: Main.hs
projekt2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
