cabal-version:   3.14
name:            projekt
version:         0.1.0.0
license:         NONE
author:          hydr0genn
maintainer:      jan.konieczny2004@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable projekt
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0,
                      gloss,
                      gloss-juicy,
                      JuicyPixels
    hs-source-dirs:   app
    default-language: Haskell2010
